--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "ci:release:canary": "lerna publish --contents dist --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website --force-publish=\"*\" --preid \"alpha-`git rev-parse --short HEAD`\" --canary --exact --yes",
     "generate:examples": "node packages/graphql-codegen-cli/dist/bin.js --require dotenv/config dotenv_config_path=dev-test/.env --config ./dev-test/codegen.yml",
     "build-website": "lerna run build",
-    "affected:test": "bob affected test",
-    "affected:lint": "bob affected lint",
-    "affected:build": "bob affected build",
-    "affected:examples": "bob affected examples"
+    "affected:test": "bob run test",
+    "affected:lint": "bob run lint",
+    "affected:build": "bob run build",
+    "affected:examples": "bob run examples"
   },
   "husky": {
     "hooks": {
@@ -45,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "bob-the-bundler": "1.0.0-rc.4",
+    "bob-the-bundler": "1.0.0-rc.5",
     "@apollo/react-common": "3.1.4",
     "@apollo/react-components": "3.1.4",
     "@apollo/react-hoc": "3.1.4",
@@ -60,12 +60,6 @@
     "@types/request": "2.48.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "p-limit": "2.2.2",
-    "fs-extra": "9.0.0",
-    "rollup": "2.3.2",
-    "@rollup/plugin-node-resolve": "7.1.1",
-    "rollup-plugin-generate-package-json": "3.2.0",
-    "rollup-plugin-auto-external": "2.0.0",
     "apollo-cache": "1.3.4",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
