--- a/packages/plugins/c-sharp/apollo-dotnet/package.json
+++ b/packages/plugins/c-sharp/apollo-dotnet/package.json
@@ -11,8 +11,8 @@
     "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
   "peerDependencies": {
-    "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
-    "graphql-tag": "^2.0.0"
+    "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
+    "graphql-tag": "2.10.3"
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.12.2",
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@ardatan/bob": "0.2.7",
     "@graphql-codegen/testing": "1.12.2",
-    "graphql": "14.6.0",
+    "graphql": "15.0.0",
     "jest": "25.1.0",
     "ts-jest": "25.2.1",
     "typescript": "3.8.3"
