--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,6 @@
   "version": "1.13.2",
   "private": true,
   "scripts": {
-    "dev": "docusaurus start",
     "start": "docusaurus start",
     "build": "docusaurus build",
     "deploy": "docusaurus deploy",
@@ -18,6 +17,34 @@
     "remark-code-import": "0.1.3",
     "remark-import-partial": "0.0.2",
     "babel-preset-minify": "0.5.1"
+  },
+  "dependencies": {
+    "@graphql-codegen/add": "1.13.2",
+    "@graphql-codegen/cli": "1.13.2",
+    "@graphql-codegen/flow": "1.13.2",
+    "@graphql-codegen/flow-operations": "1.13.2",
+    "@graphql-codegen/flow-resolvers": "1.13.2",
+    "@graphql-codegen/fragment-matcher": "1.13.2",
+    "@graphql-codegen/introspection": "1.13.2",
+    "@graphql-codegen/java": "1.13.2",
+    "@graphql-codegen/java-resolvers": "1.13.2",
+    "@graphql-codegen/schema-ast": "1.13.2",
+    "@graphql-codegen/time": "1.13.2",
+    "@graphql-codegen/typescript": "1.13.2",
+    "@graphql-codegen/typescript-apollo-angular": "1.13.2",
+    "@graphql-codegen/typescript-compatibility": "1.13.2",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.13.2",
+    "@graphql-codegen/typescript-mongodb": "1.13.2",
+    "@graphql-codegen/typescript-operations": "1.13.2",
+    "@graphql-codegen/typescript-react-apollo": "1.13.2",
+    "@graphql-codegen/typescript-resolvers": "1.13.2",
+    "@graphql-codegen/typescript-stencil-apollo": "1.13.2",
+    "@graphql-codegen/typescript-urql": "1.13.2",
+    "@graphql-codegen/typescript-vue-apollo": "1.13.2",
+    "@graphql-codegen/website": "1.13.2",
+    "codemirror": "5.52.2",
+    "codemirror-graphql": "0.11.6",
+    "js-yaml": "3.13.1"
   },
   "browserslist": {
     "production": [
