--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -13,6 +13,8 @@ jobs:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v1
       - name: Use Node 13
         uses: actions/setup-node@master
         with:
