--- a/website/package.json
+++ b/website/package.json
@@ -49,6 +49,8 @@
     "@graphql-codegen/java-apollo-android": "1.13.2",
     "@graphql-codegen/near-operation-file-preset": "1.13.2",
     "@graphql-codegen/import-types-preset": "1.13.2",
+    "@graphql-codegen/c-sharp-operations": "1.13.2",
+    "@graphql-codegen/c-sharp": "1.13.2",
     "@graphql-codegen/website": "1.13.2",
     "codemirror": "5.52.2",
     "codemirror-graphql": "0.11.6",
