--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -302,6 +302,15 @@ generates:
     plugins:
       - typescript-operations
       - typescript-react-apollo
+  ./dev-test/modules/:
+    schema: ./dev-test/modules/*/types/*.graphql
+    preset: modules
+    presetConfig:
+      baseTypesPath: types.ts
+      filename: generated.ts
+    plugins:
+      - typescript
+      - typescript-resolvers
   ./dev-test/star-wars/types.globallyAvailable.d.ts:
     schema: ./dev-test/star-wars/schema.json
     documents: ./dev-test/star-wars/**/*.graphql
