--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -42,16 +42,16 @@
   "dependencies": {
     "@graphql-codegen/core": "1.13.3",
     "@graphql-codegen/plugin-helpers": "1.13.3",
-    "@graphql-toolkit/apollo-engine-loader": "~0.10.4",
-    "@graphql-toolkit/code-file-loader": "~0.10.4",
-    "@graphql-toolkit/common": "~0.10.4",
-    "@graphql-toolkit/core": "~0.10.4",
-    "@graphql-toolkit/git-loader": "~0.10.4",
-    "@graphql-toolkit/github-loader": "~0.10.4",
-    "@graphql-toolkit/graphql-file-loader": "~0.10.4",
-    "@graphql-toolkit/json-file-loader": "~0.10.4",
-    "@graphql-toolkit/prisma-loader": "~0.10.4",
-    "@graphql-toolkit/url-loader": "~0.10.4",
+    "@graphql-toolkit/apollo-engine-loader": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/code-file-loader": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/common": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/core": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/git-loader": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/github-loader": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/graphql-file-loader": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/json-file-loader": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/prisma-loader": "0.10.6-alpha-2f9f790.5",
+    "@graphql-toolkit/url-loader": "0.10.6-alpha-2f9f790.5",
     "ansi-escapes": "4.3.1",
     "camel-case": "4.1.1",
     "chalk": "4.0.0",
