--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.3",
-    "@graphql-toolkit/common": "~0.10.4",
+    "@graphql-toolkit/common": "0.10.6-alpha-2f9f790.5",
     "tslib": "~1.11.1"
   },
   "peerDependencies": {
