--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.3",
-    "@graphql-toolkit/relay-operation-optimizer": "~0.10.4",
+    "@graphql-toolkit/relay-operation-optimizer": "0.10.6-alpha-2f9f790.5",
     "array.prototype.flatmap": "1.2.3",
     "auto-bind": "~4.0.0",
     "dependency-graph": "0.9.0",
