--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
   },
   "devDependencies": {
     "auto-bind": "4.0.0",
-    "@graphql-toolkit/apollo-engine-loader": "0.10.6",
-    "@graphql-toolkit/code-file-loader": "0.10.6",
-    "@graphql-toolkit/common": "0.10.6",
-    "@graphql-toolkit/core": "0.10.6",
-    "@graphql-toolkit/git-loader": "0.10.6",
-    "@graphql-toolkit/github-loader": "0.10.6",
-    "@graphql-toolkit/graphql-file-loader": "0.10.6",
-    "@graphql-toolkit/json-file-loader": "0.10.6",
-    "@graphql-toolkit/prisma-loader": "0.10.6",
-    "@graphql-toolkit/url-loader": "0.10.6",
+    "@graphql-tools/apollo-engine-loader": "6.0.0-alpha.1",
+    "@graphql-tools/code-file-loader": "6.0.0-alpha.1",
+    "@graphql-tools/utils": "6.0.0-alpha.1",
+    "@graphql-tools/load": "6.0.0-alpha.1",
+    "@graphql-tools/git-loader": "6.0.0-alpha.1",
+    "@graphql-tools/github-loader": "6.0.0-alpha.1",
+    "@graphql-tools/graphql-file-loader": "6.0.0-alpha.1",
+    "@graphql-tools/json-file-loader": "6.0.0-alpha.1",
+    "@graphql-tools/prisma-loader": "6.0.0-alpha.1",
+    "@graphql-tools/url-loader": "6.0.0-alpha.1",
     "tslib": "1.11.1",
     "@apollo/react-common": "3.1.4",
     "@apollo/react-components": "3.1.5",
