--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.5",
-    "@graphql-toolkit/common": "~0.10.4",
-    "@graphql-toolkit/schema-merging": "~0.10.4",
+    "@graphql-tools/utils": "6.0.0-alpha.1",
+    "@graphql-tools/merge": "6.0.0-alpha.1",
     "tslib": "~1.11.1"
   },
   "main": "dist/index.cjs.js",
