--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.5",
-    "@graphql-toolkit/common": "~0.10.4",
+    "@graphql-tools/utils": "6.0.0-alpha.1",
     "tslib": "~1.11.1"
   },
   "peerDependencies": {
