Use GraphQL Tools v6 (#4019)

--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -42,16 +42,16 @@
   "dependencies": {
     "@graphql-codegen/core": "1.15.0",
     "@graphql-codegen/plugin-helpers": "1.15.0",
-    "@graphql-tools/apollo-engine-loader": "6.0.3",
-    "@graphql-tools/code-file-loader": "6.0.3",
-    "@graphql-tools/git-loader": "6.0.3",
-    "@graphql-tools/github-loader": "6.0.3",
-    "@graphql-tools/graphql-file-loader": "6.0.3",
-    "@graphql-tools/json-file-loader": "6.0.3",
-    "@graphql-tools/load": "6.0.3",
-    "@graphql-tools/prisma-loader": "6.0.3",
-    "@graphql-tools/url-loader": "6.0.3",
-    "@graphql-tools/utils": "6.0.3",
+    "@graphql-tools/apollo-engine-loader": "^6.0.0",
+    "@graphql-tools/code-file-loader": "^6.0.0",
+    "@graphql-tools/git-loader": "^6.0.0",
+    "@graphql-tools/github-loader": "^6.0.0",
+    "@graphql-tools/graphql-file-loader": "^6.0.0",
+    "@graphql-tools/json-file-loader": "^6.0.0",
+    "@graphql-tools/load": "^6.0.0",
+    "@graphql-tools/prisma-loader": "^6.0.0",
+    "@graphql-tools/url-loader": "^6.0.0",
+    "@graphql-tools/utils": "^6.0.0",
     "ansi-escapes": "4.3.1",
     "camel-case": "4.1.1",
     "chalk": "4.0.0",
@@ -64,7 +64,7 @@
     "dependency-graph": "0.9.0",
     "detect-indent": "6.0.0",
     "glob": "7.1.6",
-    "graphql-config": "3.0.2",
+    "graphql-config": "^3.0.2",
     "indent-string": "4.0.0",
     "inquirer": "7.1.0",
     "is-glob": "4.0.1",
