--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node_version: [10, 14]
+        node_version: [10, 12, 14]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
