--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "yaml.schemas": {
-      "./packages/config-schema/dist/config-schema.json": "*codegen.*"
+      "./packages/config-schema/dist/config.schema.json": "*codegen.*"
     }
   }
