--- a/packages/utils/config-schema/package.json
+++ b/packages/utils/config-schema/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "@graphql-codegen/config-schema",
+    "name": "@graphql-codegen/config-schema",
   "description": "This internal package is in charge of creating a dynamic JSON Schema validation for the codegen.yml file",
   "version": "1.14.0",
   "license": "MIT",
 
   "scripts": {
-    "build": "mkdir dist && ts-node src/index.ts"
+    "build": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/mkdirp": "1.0.0",
+    "mkdirp": "1.0.4",
+    "jsonpath": "1.0.2",
+    "@types/jsonpath": "0.2.0",
     "@types/node": "13",
     "@types/fs-extra": "9.0.1",
     "fs-extra": "9.0.0",
