Bob needs rootDir to be packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "incremental": true,
     "baseUrl": ".",
     "outDir": "dist",
+    "rootDir": "packages",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
