--- a/packages/utils/config-schema/package.json
+++ b/packages/utils/config-schema/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "@graphql-codegen/config-schema",
+  "name": "@graphql-codegen/config-schema",
+  "private": true,
   "description": "This internal package is in charge of creating a dynamic JSON Schema validation for the codegen.yml file",
   "version": "1.14.0",
   "license": "MIT",
-
   "scripts": {
     "build": "ts-node src/index.ts"
   },
