--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -76,6 +76,7 @@
     "mkdirp": "1.0.4",
     "pascal-case": "3.1.1",
     "request": "2.88.2",
+    "string-env-interpolation": "1.0.1",
     "ts-log": "2.1.4",
     "tslib": "^2.0.0",
     "upper-case": "2.0.1",
