Remove lerna and use custom script for releases

--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "prettier:check": "prettier --ignore-path .gitignore --check \"**/*.{ts,tsx,graphql,yml}\"",
     "types:check": "tsc --noEmit",
     "test-and-build": "yarn build && yarn test",
-    "prerelease": "yarn test-and-build",
-    "prerelease:canary": "yarn test-and-build",
-    "release": "lerna publish --contents dist --exact --force-publish=\"*\"",
-    "release:canary": "lerna publish --contents dist --force-publish=\"*\" --canary --exact",
+    "release": "node scripts/release.js",
+    "release:canary": "node scripts/release.js --canary",
     "ci:release:canary": "lerna publish --contents dist --force-publish=\"*\" --preid \"alpha-`git rev-parse --short HEAD`\" --canary --exact --yes",
     "generate:examples": "node packages/graphql-codegen-cli/dist/bin.js --require dotenv/config dotenv_config_path=dev-test/.env --config ./dev-test/codegen.yml"
   },
@@ -87,6 +85,7 @@
     "eslint-plugin-standard": "4.0.1",
     "flow-bin": "0.125.1",
     "flow-parser": "0.125.1",
+    "fs-extra": "9.0.0",
     "graphql": "15.0.0",
     "graphql-tag": "2.10.3",
     "husky": "4.2.5",
@@ -94,7 +93,6 @@
     "jest": "26.0.1",
     "jest-docblock": "26.0.0",
     "jest-junit": "10.0.0",
-    "lerna": "3.22.0",
     "lint-staged": "10.2.7",
     "lodash": "4.17.15",
     "rimraf": "3.0.2",
