--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "graphql-code-generator",
+  "version": "1.15.0",
   "private": true,
   "scripts": {
     "clean": "rimraf node_modules packages/{*,plugins/*/*,presets/*,utils/*}/node_modules",
