--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,7 @@
     "vscode-languageserver-types": "3.15.1"
   },
   "dependencies": {
+    "react-markdown": "4.3.1",
     "monaco-yaml": "2.4.0",
     "react-select": "3.1.0",
     "@graphql-codegen/add": "1.15.1",
