--- a/package.json
+++ b/package.json
@@ -41,24 +41,38 @@
     ]
   },
   "devDependencies": {
-    "@graphql-typed-document-node/core": "0.0.1",
-    "auto-bind": "4.0.0",
-    "@graphql-tools/apollo-engine-loader": "6.0.15",
-    "@graphql-tools/code-file-loader": "6.0.15",
-    "@graphql-tools/utils": "6.0.15",
-    "@graphql-tools/load": "6.0.15",
-    "@graphql-tools/git-loader": "6.0.15",
-    "@graphql-tools/github-loader": "6.0.15",
-    "@graphql-tools/graphql-file-loader": "6.0.15",
-    "@graphql-tools/json-file-loader": "6.0.15",
-    "@graphql-tools/prisma-loader": "6.0.15",
-    "@graphql-tools/url-loader": "6.0.15",
-    "tslib": "2.0.0",
     "@apollo/react-common": "3.1.4",
     "@apollo/react-components": "3.1.5",
     "@apollo/react-hoc": "3.1.5",
     "@apollo/react-hooks": "3.1.5",
     "@babel/preset-typescript": "7.10.4",
+    "@graphql-codegen/add": "1.17.4",
+    "@graphql-codegen/flow": "1.17.4",
+    "@graphql-codegen/flow-operations": "1.17.4",
+    "@graphql-codegen/flow-resolvers": "1.17.4",
+    "@graphql-codegen/near-operation-file-preset": "1.17.4",
+    "@graphql-codegen/typed-document-node": "1.17.4",
+    "@graphql-codegen/typescript": "1.17.4",
+    "@graphql-codegen/typescript-apollo-angular": "1.17.4",
+    "@graphql-codegen/typescript-compatibility": "1.17.4",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.17.4",
+    "@graphql-codegen/typescript-operations": "1.17.4",
+    "@graphql-codegen/typescript-react-apollo": "1.17.4",
+    "@graphql-codegen/typescript-resolvers": "1.17.4",
+    "@graphql-codegen/typescript-stencil-apollo": "1.17.4",
+    "@graphql-codegen/typescript-urql": "1.17.4",
+    "@graphql-codegen/typescript-vue-apollo": "1.17.4",
+    "@graphql-tools/apollo-engine-loader": "6.0.15",
+    "@graphql-tools/code-file-loader": "6.0.15",
+    "@graphql-tools/git-loader": "6.0.15",
+    "@graphql-tools/github-loader": "6.0.15",
+    "@graphql-tools/graphql-file-loader": "6.0.15",
+    "@graphql-tools/json-file-loader": "6.0.15",
+    "@graphql-tools/load": "6.0.15",
+    "@graphql-tools/prisma-loader": "6.0.15",
+    "@graphql-tools/url-loader": "6.0.15",
+    "@graphql-tools/utils": "6.0.15",
+    "@graphql-typed-document-node/core": "0.0.1",
     "@types/common-tags": "1.8.0",
     "@types/glob": "7.1.3",
     "@types/jest": "26.0.7",
@@ -66,22 +80,23 @@
     "@types/node": "14.0.26",
     "@types/react": "16.9.43",
     "@types/request": "2.48.5",
+    "@typescript-eslint/eslint-plugin": "3.7.0",
+    "@typescript-eslint/parser": "3.7.0",
     "@vue/apollo-composable": "4.0.0-alpha.8",
     "@vue/composition-api": "0.6.7",
-    "bob-the-bundler": "1.0.2",
-    "graphql-config": "^3.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
     "apollo-cache": "1.3.5",
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
     "apollo-server": "2.16.0",
     "apollo-utilities": "1.3.4",
-    "@typescript-eslint/eslint-plugin": "3.7.0",
-    "@typescript-eslint/parser": "3.7.0",
+    "auto-bind": "4.0.0",
+    "bob-the-bundler": "1.0.2",
+    "camel-case": "4.1.1",
+    "constant-case": "3.0.3",
     "eslint": "7.5.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-standard": "14.1.1",
+    "eslint-import-resolver-node": "0.3.4",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
@@ -91,17 +106,24 @@
     "flow-parser": "0.130.0",
     "fs-extra": "9.0.1",
     "graphql": "15.3.0",
+    "graphql-config": "^3.0.2",
     "graphql-tag": "2.10.4",
     "husky": "4.2.5",
-    "java-ast": "0.3.0",
+    "java-ast": "0.2.0",
     "jest": "26.1.0",
     "jest-docblock": "26.0.0",
     "jest-junit": "11.0.1",
     "lint-staged": "10.2.11",
     "lodash": "4.17.19",
+    "lower-case": "2.0.1",
+    "pascal-case": "3.1.1",
+    "prettier": "2.0.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "rimraf": "3.0.2",
-    "ts-jest": "26.1.3",
     "stencil-apollo": "0.1.5",
+    "ts-jest": "26.1.3",
+    "tslib": "2.0.0",
     "typescript": "3.9.7",
     "urql": "1.9.8",
     "vue": "2.6.11"
@@ -116,8 +138,6 @@
   },
   "resolutions": {
     "graphql": "15.3.0",
-    "graphql-language-service-interface": "2.4.0",
-    "**/apollo-language-server/graphql": "^15.0.0",
-    "**/@types/graphql-upload/graphql": "^15.0.0"
+    "graphql-language-service-interface": "2.4.0"
   }
 }
