--- a/packages/graphql-cli-codegen-plugin/package.json
+++ b/packages/graphql-cli-codegen-plugin/package.json
@@ -26,8 +26,8 @@
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "1.17.4",
-    "@graphql-cli/common": "4.0.0"
+    "@graphql-cli/common": "4.0.0",
+    "@graphql-codegen/cli": "1.17.4"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
