--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "bin": {
     "gql-gen": "dist/bin.js",
-    "graphql-codegen": "dist/bin.js",
-    "graphql-code-generator": "dist/bin.js"
+    "graphql-code-generator": "dist/bin.js",
+    "graphql-codegen": "dist/bin.js"
   },
   "repository": {
     "type": "git",
@@ -85,23 +85,32 @@
     "yargs": "15.4.1"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript": "1.17.4",
+    "@graphql-codegen/typescript-operations": "1.17.4",
+    "@graphql-codegen/typescript-react-apollo": "1.17.4",
+    "@graphql-tools/merge": "6.0.15",
     "@types/chokidar": "1.7.5",
     "@types/debounce": "1.2.0",
     "@types/detect-indent": "5.0.0",
     "@types/glob": "7.1.3",
     "@types/inquirer": "7.3.0",
     "@types/is-glob": "4.0.1",
+    "@types/jest": "26.0.7",
     "@types/js-yaml": "3.12.5",
     "@types/listr": "0.14.2",
     "@types/log-symbols": "2.0.0",
     "@types/minimatch": "3.0.3",
     "@types/mkdirp": "1.0.1",
+    "@types/node": "14.0.26",
+    "@types/rimraf": "3.0.0",
     "@types/valid-url": "1.0.3",
     "bdd-stdin": "0.2.0",
     "dotenv": "8.2.0",
+    "graphql": "15.3.0",
     "js-yaml": "3.14.0",
     "make-dir": "3.1.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "rimraf": "3.0.2"
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
