--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -43,6 +43,9 @@
     "@graphql-tools/utils": "^6.0.0",
     "tslib": "~2.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0"
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
