--- a/packages/plugins/c-sharp/c-sharp/package.json
+++ b/packages/plugins/c-sharp/c-sharp/package.json
@@ -10,6 +10,7 @@
     "prepack": "bob prepack"
   },
   "dependencies": {
+    "@graphql-codegen/c-sharp-common": "1.17.4",
     "@graphql-codegen/plugin-helpers": "1.17.4",
     "@graphql-codegen/visitor-plugin-common": "1.17.4",
     "strip-indent": "3.0.0",
@@ -18,6 +19,9 @@
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
+  },
+  "devDependencies": {
+    "graphql": "15.3.0"
   },
   "sideEffects": false,
   "main": "dist/index.cjs.js",
