--- a/packages/plugins/c-sharp/common/package.json
+++ b/packages/plugins/c-sharp/common/package.json
@@ -1,40 +1,36 @@
 {
-  "name": "@graphql-codegen/flow-operations",
+  "name": "@graphql-codegen/c-sharp-common",
   "version": "1.17.4",
-  "description": "GraphQL Code Generator plugin for generating Flow types for GraphQL operations (query/mutation/subscription/fragment)",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dotansimha/graphql-code-generator.git",
-    "directory": "packages/plugins/flow/operations"
-  },
+  "description": "GraphQL Code Generator plugin for generating CSharp code based on a GraphQL schema",
+  "repository": "git@github.com:dotansimha/graphql-code-generator.git",
   "license": "MIT",
   "scripts": {
     "lint": "eslint **/*.ts",
-    "test": "jest --no-watchman --config ../../../../jest.config.js",
+    "test": "jest --no-watchman",
     "prepack": "bob prepack"
   },
   "dependencies": {
-    "@graphql-codegen/flow": "1.17.4",
     "@graphql-codegen/plugin-helpers": "1.17.4",
     "@graphql-codegen/visitor-plugin-common": "1.17.4",
-    "auto-bind": "~4.0.0",
-    "tslib": "~2.0.0"
+    "strip-indent": "3.0.0",
+    "tslib": "2.0.0",
+    "unixify": "1.0.0"
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
-    "graphql": "15.3.0",
-    "lower-case": "2.0.1"
+    "graphql": "15.3.0"
   },
+  "sideEffects": false,
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "typescript": {
     "definition": "dist/index.d.ts"
   },
-  "buildOptions": {
-    "input": "./src/index.ts"
+  "jest-junit": {
+    "outputDirectory": "../../../../test-results/c-sharp"
   },
   "publishConfig": {
     "access": "public"
