--- a/packages/plugins/flow/flow/package.json
+++ b/packages/plugins/flow/flow/package.json
@@ -22,6 +22,10 @@
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0",
+    "lower-case": "2.0.1"
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
