--- a/packages/plugins/java/apollo-android/package.json
+++ b/packages/plugins/java/apollo-android/package.json
@@ -27,7 +27,8 @@
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
-    "@types/pluralize": "0.0.29"
+    "@types/pluralize": "0.0.29",
+    "graphql": "15.3.0"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
