--- a/packages/plugins/java/common/package.json
+++ b/packages/plugins/java/common/package.json
@@ -12,10 +12,14 @@
     "lint": "eslint **/*.ts",
     "prepack": "bob prepack"
   },
+  "devDependencies": {
+    "graphql": "15.3.0"
+  },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.17.4",
     "@graphql-codegen/visitor-plugin-common": "1.17.4",
     "auto-bind": "~4.0.0",
+    "java-parser": "0.8.0",
     "strip-indent": "3.0.0",
     "tslib": "~2.0.0",
     "unixify": "1.0.0"
