--- a/packages/plugins/other/jsdoc/package.json
+++ b/packages/plugins/other/jsdoc/package.json
@@ -18,6 +18,9 @@
     "@graphql-codegen/visitor-plugin-common": "1.17.4",
     "tslib": "~2.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0"
+  },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
