--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -21,6 +21,9 @@
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0"
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
