--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "@types/array.prototype.flatmap": "1.2.1",
-    "@types/parse-filepath": "1.0.0"
+    "@types/parse-filepath": "1.0.0",
+    "graphql": "15.3.0",
+    "lower-case": "2.0.1"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
