--- a/packages/plugins/typescript/named-operations-object/package.json
+++ b/packages/plugins/typescript/named-operations-object/package.json
@@ -22,6 +22,9 @@
     "change-case": "4.1.1",
     "tslib": "~2.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0"
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
