--- a/packages/plugins/typescript/resolvers/package.json
+++ b/packages/plugins/typescript/resolvers/package.json
@@ -25,7 +25,9 @@
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
-    "graphql-subscriptions": "1.1.0"
+    "graphql": "15.3.0",
+    "graphql-subscriptions": "1.1.0",
+    "pascal-case": "3.1.1"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
