--- a/packages/plugins/typescript/stencil-apollo/package.json
+++ b/packages/plugins/typescript/stencil-apollo/package.json
@@ -21,6 +21,10 @@
     "pascal-case": "3.1.1",
     "tslib": "~2.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0",
+    "graphql-tag": "2.10.4"
+  },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
     "graphql-tag": "^2.0.0",
