--- a/packages/plugins/typescript/type-graphql/package.json
+++ b/packages/plugins/typescript/type-graphql/package.json
@@ -20,6 +20,9 @@
     "auto-bind": "~4.0.0",
     "tslib": "~2.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0"
+  },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
