--- a/packages/plugins/typescript/typed-document-node/package.json
+++ b/packages/plugins/typescript/typed-document-node/package.json
@@ -16,11 +16,14 @@
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
+  "devDependencies": {
+    "graphql": "15.3.0"
+  },
   "dependencies": {
-    "change-case": "4.1.1",
     "@graphql-codegen/plugin-helpers": "1.17.4",
     "@graphql-codegen/visitor-plugin-common": "1.17.4",
     "auto-bind": "~4.0.0",
+    "change-case": "4.1.1",
     "tslib": "~2.0.0"
   },
   "main": "dist/index.cjs.js",
