--- a/packages/plugins/typescript/typescript/package.json
+++ b/packages/plugins/typescript/typescript/package.json
@@ -19,6 +19,13 @@
     "auto-bind": "~4.0.0",
     "tslib": "~2.0.0"
   },
+  "devDependencies": {
+    "camel-case": "4.1.1",
+    "constant-case": "3.0.3",
+    "graphql": "15.3.0",
+    "lower-case": "2.0.1",
+    "pascal-case": "3.1.1"
+  },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
