--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -157,6 +157,15 @@ generates:
       - typescript
       - typescript-operations
       - typescript-react-apollo
+  ./dev-test/githunt/types.reactApollo.v2.tsx:
+    schema: ./dev-test/githunt/schema.json
+    documents: ./dev-test/githunt/**/*.graphql
+    config:
+      reactApolloVersion: 2
+    plugins:
+      - typescript
+      - typescript-operations
+      - typescript-react-apollo
   ./dev-test/githunt/types.reactApollo.customSuffix.tsx:
     schema: ./dev-test/githunt/schema.json
     documents: ./dev-test/githunt/**/*.graphql
