--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -64,7 +64,7 @@ jobs:
         uses: 'kamilkisiela/pr-comment@master'
         with:
           message: |
-            The latest changes of this PR are available are not published as alpha, since there are no linked `changesets` for this PR.
+            The latest changes of this PR are not available as alpha, since there are no linked `changesets` for this PR.
           bot-token: ${{ secrets.GH_API_TOKEN }}
           bot: 'theguild-bot'
           github-token: ${{ secrets.GITHUB_TOKEN }}
