--- a/packages/plugins/c-sharp/c-sharp-operations/package.json
+++ b/packages/plugins/c-sharp/c-sharp-operations/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphql-codegen/c-sharp-operations",
   "version": "1.17.8",
-  "description": "GraphQL Code Generator plugin for generating ready-to-use Angular Components based on GraphQL operations",
+  "description": "GraphQL Code Generator plugin for generating CSharp code based on GraphQL operations",
   "repository": "git@github.com:dotansimha/graphql-code-generator.git",
   "license": "MIT",
   "scripts": {
