--- a/packages/presets/graphql-modules/package.json
+++ b/packages/presets/graphql-modules/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@graphql-codegen/modules-preset",
-  "version": "1.14.0",
+  "name": "@graphql-codegen/graphql-modules-preset",
+  "version": "1.0.0",
   "description": "GraphQL Code Generator preset for modularized schema",
   "repository": {
     "type": "git",
@@ -15,14 +15,13 @@
     "@types/parse-filepath": "1.0.0"
   },
   "dependencies": {
-    "@graphql-codegen/add": "1.14.0",
-    "@graphql-codegen/plugin-helpers": "1.14.0",
-    "@graphql-codegen/visitor-plugin-common": "1.14.0",
-    "parse-filepath": "1.0.2",
-    "tslib": "~2.0.0"
+    "@graphql-codegen/add": "~2.0.1",
+    "@graphql-codegen/plugin-helpers": "^1.17.8",
+    "@graphql-codegen/visitor-plugin-common": "^1.17.14",
+    "parse-filepath": "^1.0.2",
+    "tslib": "~2.0.1"
   },
   "peerDependencies": {
-    "@graphql-toolkit/common": "~0.10.5",
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "main": "dist/index.cjs.js",
@@ -35,6 +34,7 @@
     "input": "./src/index.ts"
   },
   "publishConfig": {
+    "directory": "dist",
     "access": "public"
   }
 }
