--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "flow-parser": "0.132.0",
     "fs-extra": "9.0.1",
     "graphql": "15.3.0",
-    "graphql-config": "^3.0.2",
+    "graphql-config": "0.0.0-experimental-49a60af.df7",
     "graphql-tag": "2.11.0",
     "husky": "4.2.5",
     "java-ast": "0.3.0",
