--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/dotansimha/graphql-code-generator#readme",
   "dependencies": {
+    "latest-version": "5.1.0",
     "@graphql-codegen/core": "1.17.8",
     "@graphql-codegen/plugin-helpers": "^1.17.8",
     "@graphql-tools/apollo-engine-loader": "^6",
