--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,6 +65,9 @@
       "@graphql-codegen/near-operation-file-preset": ["packages/presets/near-operation-file/src/index.ts"],
       "@graphql-codegen/testing": ["packages/utils/graphql-codegen-testing/src/index.ts"],
       "@graphql-codegen/plugin-helpers": ["packages/utils/plugins-helpers/src/index.ts"],
+      "@graphql-codegen/typescript-apollo-client-helpers": [
+        "packages/plugins/typescript/apollo-client-helpers/src/index.ts"
+      ],
       "@graphql-cli/codegen": ["packages/graphql-cli-codegen-plugin/src/index.ts"]
     }
   },
