--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "**/@types/graphql-upload/graphql": "^15.0.0"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "patch-package": "^6.2.2"
   }
 }
