fix(federation): set hasFederation even when there are no resolveReference

--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -21,6 +21,8 @@ generates:
     schema: ./dev-test/test-schema/schema-federation.graphql
     config:
       federation: true
+      mappers:
+        User: ./my-models#UserModel
     plugins:
       - typescript
       - typescript-resolvers
