fixes adde docs added website example

--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -199,7 +199,7 @@ generates:
       - typescript-operations
       - typescript-react-query
     config:
-      fetcher: fetch
+      fetcher:
   ./dev-test/githunt/types.apolloAngular.ts:
     schema: ./dev-test/githunt/schema.json
     documents: ./dev-test/githunt/**/*.graphql
