🚀 🚀 🚀 NEW PLUGIN: `typescript-react-query` (#5107)
* new plugin: typescript-react-query

* fixes
adde docs
added website example

--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -191,6 +191,15 @@ generates:
       - typescript
       - typescript-operations
       - typescript-react-apollo
+  ./dev-test/githunt/types.react-query.ts:
+    schema: ./dev-test/githunt/schema.json
+    documents: ./dev-test/githunt/**/*.graphql
+    plugins:
+      - typescript
+      - typescript-operations
+      - typescript-react-query
+    config:
+      fetcher:
   ./dev-test/githunt/types.apolloAngular.ts:
     schema: ./dev-test/githunt/schema.json
     documents: ./dev-test/githunt/**/*.graphql
