--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "website/live-demo"
     ],
     "nohoist": [
+      "@graphql-codegen/website/@docusaurus/*",
       "**/@babel-*",
       "**/@babel-*/**"
     ]
