--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -9,7 +9,7 @@ jobs:
   test:
     name: Deploy Website
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, '[deploy_website]') || contains(github.event.head_commit.message, 'update monorepo packages versions')
+    if: contains(github.event.head_commit.message, '[deploy_website]') || contains(github.event.head_commit.message, 'update monorepo packages versions') || contains(github.event.head_commit.message, 'Upcoming Release Changes')
     steps:
       - name: Checkout
         uses: actions/checkout@v1
