--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -13,7 +13,7 @@
     "prepack": "bob prepack"
   },
   "dependencies": {
-    "@graphql-tools/optimize": "1.0.0",
+    "@graphql-tools/optimize": "^1.0.1",
     "@graphql-codegen/plugin-helpers": "^1.18.1",
     "@graphql-tools/relay-operation-optimizer": "^6",
     "array.prototype.flatmap": "^1.2.4",
