--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "docusaurus start",
-    "build:website": "docusaurus build",
+    "build:website": "USE_SIMPLE_CSS_MINIFIER=true docusaurus build",
     "prebuild:website": "yarn generate:config-docs",
     "prestart": "yarn generate:config-docs",
     "generate:config-docs": "cd ../packages/utils/config-schema && yarn build ../../../website/ ./docs/generated-config ./static/"
